v3 настроена логика в StructureService такая:
getDirsForUser() - показываются файлы и директории для user в корне (root). если пользователь хочет углубиться в директорию - нужно вызывать метод getDataForCertainDir().